Fix Color In Code background color interaction.
- Modified HTML structure so that all content (right part of the site) is actually full width (12 columns), and the left nav is on top of it (overlaping). This way the color interaction in section 4 can change the color of the whole background, but only in that particular section.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -197,7 +197,8 @@ body {
     .main_sidebar a:hover {
       color: white; }
   .main_sidebar .main_nav {
-    height: 75%; }
+    height: 75%;
+    z-index: 10; }
     .main_sidebar .main_nav .nav_list {
       height: 100%; }
       .main_sidebar .main_nav .nav_list .nav_list_item {
@@ -230,24 +231,21 @@ body {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 82.94039%;
-  margin-left: 17.05961%;
+  width: 100%;
   position: relative;
   height: 100%; }
   .content:last-child {
     margin-right: 0; }
   .content .content_section {
-    padding: 50px 0px 0px 0px;
-    /*
-    &:nth-child(1) { background-color: $color-hex-red; }
-    &:nth-child(2) { background-color: $color-hex-green; }
-    &:nth-child(3) { background-color: $color-hex-blue; }
-    &:nth-child(4) { background-color: $color-hex-yellow; }
-    &:nth-child(5) { background-color: $color-hex-cyan; }
-    &:nth-child(6) { background-color: $color-hex-magenta; }
-    */ }
-    .content .content_section:first-child {
-      display: block; }
+    padding: 50px 0px 0px 0px; }
+    .content .content_section .content-container {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 82.94039%;
+      margin-left: 17.05961%; }
+      .content .content_section .content-container:last-child {
+        margin-right: 0; }
 
 .footer {
   display: none; }
@@ -272,12 +270,7 @@ body {
 #section-colorcode {
   -webkit-transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-  /*.color-overlay{
-      @include position(absolute, 0 0 0 0);
-      width: 100%;
-      height: 100%;
-  }*/ }
+  transition: all 1s ease-in-out; }
   #section-colorcode label {
     font-size: 118px;
     line-height: 144px;
